--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 0.7vw;
     /* overflow:hidden; */
 }
 
@@ -17,7 +19,7 @@ html, body {
 .buttons {
     z-index: 1;
     position: absolute;
-    top: 7%;
+    top: 5%;
     /* border: 4px solid red; */
     left: 0;
     right: 0;
@@ -27,6 +29,30 @@ html, body {
 .button {
     /* display: flex; */
     justify-content: center;
+    width: 10%;
+    height: 5%;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 1.5vw;
+}
+
+.text {
+    transition: opacity 0.1s;
+}
+
+.play-button {
+    position: absolute; 
+    left: 2%; 
+    width: 5%; 
+    aspect-ratio: 1;
+    padding: 0;
+}
+
+.stop-button {
+    position: absolute; 
+    left: 2%; 
+    width: 5%; 
+    aspect-ratio: 1;
+    padding: 0;
 }
 
 .text-right {
@@ -42,6 +68,8 @@ html, body {
     border-radius: 50px;
     transition: height 0.55s;
     opacity: 0;
+    text-align: left;
+    padding: 3%
 }
 
 .text-left {
@@ -57,8 +85,6 @@ html, body {
     border-radius: 50px;
     transition: height 0.55s;
     opacity: 0;
-}
-
-.text {
-    transition: opacity 0.1s;
+    text-align: left;
+    padding: 3%
 }
