--- a/styles.css
+++ b/styles.css
@@ -19,48 +19,60 @@ html, body {
 .buttons {
     z-index: 1;
     position: absolute;
-    top: 5%;
+    top: 3%;
     /* border: 4px solid red; */
     left: 0;
     right: 0;
     text-align: center;
+    height: 10%;
 }
 
 .button {
     /* display: flex; */
     justify-content: center;
     width: 10%;
-    height: 5%;
+    height: 50%;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 1.5vw;
+    border: none;
+    border-radius: 10px;
+    margin-left: 1%;
+    margin-right: 1%
+}
+
+.button:hover {
+    background-color: darkgray;
 }
 
 .text {
     transition: opacity 0.1s;
 }
 
-.play-button {
+.media-button {
     position: absolute; 
-    left: 2%; 
-    width: 5%; 
+    left: 1%; 
+    width: 6%; 
     aspect-ratio: 1;
     padding: 0;
+    border: none;
+    border-radius: 70%;
 }
 
-.stop-button {
-    position: absolute; 
-    left: 2%; 
-    width: 5%; 
-    aspect-ratio: 1;
-    padding: 0;
+.media-button:hover {
+    background-color: darkgray;
+}
+
+.media-button-image {
+    width: 80%; 
+    padding-top: 7%
 }
 
 .text-right {
     z-index: 1;
     position: absolute;
     right: 5%;
-    top: 20%;
-    border: 4px solid red;
+    top: 12%;
+    /* border: 4px solid red; */
     background-color: white;
     text-align: center;
     height: 0%;
@@ -76,8 +88,8 @@ html, body {
     z-index: 1;
     position: absolute;
     left: 5%;
-    top: 20%;
-    border: 4px solid red;
+    top: 12%;
+    /* border: 4px solid red; */
     background-color: white;
     text-align: center;
     height: 0%;
