--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 0.7vw;
     /* overflow:hidden; */
 }
 
@@ -17,40 +19,84 @@ html, body {
 .buttons {
     z-index: 1;
     position: absolute;
-    top: 7%;
+    top: 3%;
     /* border: 4px solid red; */
     left: 0;
     right: 0;
     text-align: center;
+    height: 10%;
 }
 
 .button {
     /* display: flex; */
     justify-content: center;
+    width: 10%;
+    height: 50%;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 1.5vw;
+    border: none;
+    border-radius: 10px;
+    margin-left: 1%;
+    margin-right: 1%
+}
+
+.button:hover {
+    background-color: darkgray;
+}
+
+.text {
+    transition: opacity 0.1s;
+}
+
+.media-button {
+    position: absolute; 
+    left: 1%; 
+    width: 6%; 
+    aspect-ratio: 1;
+    padding: 0;
+    border: none;
+    border-radius: 70%;
+}
+
+.media-button:hover {
+    background-color: darkgray;
+}
+
+.media-button-image {
+    width: 80%; 
+    padding-top: 7%
 }
 
 .text-right {
     z-index: 1;
     position: absolute;
     right: 5%;
-    top: 20%;
-    border: 4px solid red;
+    top: 12%;
+    /* border: 4px solid red; */
     background-color: white;
     text-align: center;
-    height: 60%;
+    height: 0%;
     width: 30%;
     border-radius: 50px;
+    transition: height 0.55s;
+    opacity: 0;
+    text-align: left;
+    padding: 3%
 }
 
 .text-left {
     z-index: 1;
     position: absolute;
     left: 5%;
-    top: 20%;
-    border: 4px solid red;
+    top: 12%;
+    /* border: 4px solid red; */
     background-color: white;
     text-align: center;
-    height: 60%;
+    height: 0%;
     width: 30%;
     border-radius: 50px;
+    transition: height 0.55s;
+    opacity: 0;
+    text-align: left;
+    padding: 3%
 }
