--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ html, body {
     font-family: 'Lexend Deca', sans-serif;
     font-size: 0.7vw;
     /* overflow:hidden; */
+    background: -moz-linear-gradient(top,   #e1d0ab 0%, #3f495f 35%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #e1d0ab 0%, #3f495f 35%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #e1d0ab 0%, #3f495f 35%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 .render-canvas {
@@ -37,7 +40,8 @@ html, body {
     border: none;
     border-radius: 10px;
     margin-left: 1%;
-    margin-right: 1%
+    margin-right: 1%;
+    background-color: rgba(256, 256, 256, 0.3);
 }
 
 .button:hover {
@@ -56,6 +60,7 @@ html, body {
     padding: 0;
     border: none;
     border-radius: 70%;
+    background-color: rgba(256, 256, 256, 0.3);
 }
 
 .media-button:hover {
@@ -73,7 +78,7 @@ html, body {
     right: 5%;
     top: 12%;
     /* border: 4px solid red; */
-    background-color: white;
+    background-color: #aaadb2;
     text-align: center;
     height: 0%;
     width: 30%;
@@ -90,7 +95,7 @@ html, body {
     left: 5%;
     top: 12%;
     /* border: 4px solid red; */
-    background-color: white;
+    background-color: #aaadb2;
     text-align: center;
     height: 0%;
     width: 30%;
