--- a/styles.css
+++ b/styles.css
@@ -16,31 +16,29 @@ html, body {
     z-index: 0;
     width: 100%;
     height: 100%;
-    /* border: 4px solid yellow; */
 }
 
 .buttons {
+    /* border: 4px solid red; */
     z-index: 1;
     position: absolute;
-    top: 3%;
-    /* border: 4px solid red; */
+    top: 0;
     left: 0;
     right: 0;
     text-align: center;
     height: 10%;
+    background-color: rgba(256, 256, 256, 0.3);
 }
 
 .button {
-    /* display: flex; */
     justify-content: center;
     width: 10%;
-    height: 50%;
+    height: 60%;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 1.5vw;
     border: none;
     border-radius: 10px;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin: 1%;
     background-color: rgba(256, 256, 256, 0.3);
 }
 
@@ -48,19 +46,74 @@ html, body {
     background-color: darkgray;
 }
 
-.text {
+.content {
     transition: opacity 0.1s;
 }
 
+.text-right {
+    /* border: 1px solid red; */
+    z-index: 1;
+    position: absolute;
+    right: 5%;
+    top: 14.2%;
+    background-color: #ced3db;
+    text-align: center;
+    height: 0%;
+    width: 35%;
+    border-radius: 50px;
+    transition: height 0.55s;
+    opacity: 0;
+    text-align: left;
+    padding-top: 2%
+}
+
+.text-left {
+    /* border: 1px solid red; */
+    z-index: 1;
+    position: absolute;
+    left: 5%;
+    top: 14.2%;
+    background-color: #ced3db;
+    text-align: center;
+    height: 0%;
+    width: 35%;
+    border-radius: 50px;
+    transition: height 0.55s;
+    opacity: 0;
+    text-align: left;
+    padding-top: 2%
+}
+
+.left-side {
+    /* border: 1px solid red; */
+    width: 55%;
+    height: 20%;
+    float: left;
+    margin-top: 2%;
+    margin-bottom: 3%;
+}
+
+.media-buttons {
+    /* border: 1px solid red; */
+    width: 14%;
+    float: left;
+}
+
+.card {
+    /* border: 1px solid red; */
+    float: right;
+    width: 86%;
+    padding-top: 1%
+
+}
+
 .media-button {
-    position: absolute; 
-    left: 1%; 
-    width: 6%; 
     aspect-ratio: 1;
     padding: 0;
     border: none;
     border-radius: 70%;
     background-color: rgba(256, 256, 256, 0.3);
+    margin: 20%;
 }
 
 .media-button:hover {
@@ -72,36 +125,17 @@ html, body {
     padding-top: 7%
 }
 
-.text-right {
-    z-index: 1;
-    position: absolute;
-    right: 5%;
-    top: 12%;
-    /* border: 4px solid red; */
-    background-color: #aaadb2;
+.icons {
+    /* border: 1px solid red; */
+    width: 34%;
+    height: 15%;
+    float: right;
     text-align: center;
-    height: 0%;
-    width: 30%;
-    border-radius: 50px;
-    transition: height 0.55s;
-    opacity: 0;
-    text-align: left;
-    padding: 3%
+    margin-top: 3%;
+    margin-right: 10%;
 }
 
-.text-left {
-    z-index: 1;
-    position: absolute;
-    left: 5%;
-    top: 12%;
-    /* border: 4px solid red; */
-    background-color: #aaadb2;
-    text-align: center;
-    height: 0%;
-    width: 30%;
-    border-radius: 50px;
-    transition: height 0.55s;
-    opacity: 0;
-    text-align: left;
-    padding: 3%
+.icon {
+    /* border: 1px solid red; */
+    width: 15%;
 }
