--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,28 @@ html, body {
     background: linear-gradient(to bottom,  #e1d0ab 0%, #3f495f 35%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
+#loading-screen {
+    z-index: 4;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: black;
+    /* display: none; */
+}
+
+#windows-logo {
+    position: absolute;
+    top: 30%;
+    width: 10%;
+}
+
+#loading-animation {
+    position: absolute;
+    top: 70%;
+    width: 10%;
+}
+
 .render-canvas {
     display: flex;
     z-index: 0;
