--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html, body {
     height: 100%;
     text-align: center;
     background-color: black;
-    /* display: none; */
+    display: none;
 }
 
 #windows-logo {
