--- a/styles.css
+++ b/styles.css
@@ -16,21 +16,38 @@ html, body {
     position: absolute;
     width: 100%;
     height: 100%;
-    text-align: center;
     background-color: black;
-    display: none;
+    transition: opacity 0.5s;
+    opacity: 1;
 }
 
 #windows-logo {
-    position: absolute;
-    top: 30%;
-    width: 10%;
+    /* border: 1px solid red; */
+    display: block;
+    margin: auto;
+    width: 7%;
+    position: relative;
+    top: 20%;
+}
+
+#loading-text {
+    /* border: 1px solid red; */
+    color:#ffffff;
+    display: block;
+    margin: auto;
+    width: 7%;
+    position: relative;
+    top: 40%;
+    text-align: center;
 }
 
 #loading-animation {
-    position: absolute;
-    top: 70%;
-    width: 10%;
+    /* border: 1px solid red; */
+    display: block;
+    margin: auto;
+    width: 3%;
+    position: relative;
+    top: 50%;
 }
 
 .render-canvas {
@@ -40,8 +57,8 @@ html, body {
     height: 100%;
 }
 
-.buttons {
-    /* border: 4px solid red; */
+#buttons {
+    /* border: 1px solid red; */
     z-index: 1;
     position: absolute;
     top: 0;
@@ -50,6 +67,8 @@ html, body {
     text-align: center;
     height: 10%;
     background-color: rgba(256, 256, 256, 0.3);
+    opacity: 0;
+    transition: opacity 4s;
 }
 
 .button {
