--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,45 @@ html, body {
     background: linear-gradient(to bottom,  #e1d0ab 0%, #3f495f 35%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
+#loading-screen {
+    z-index: 4;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transition: opacity 0.5s;
+    opacity: 1;
+}
+
+#windows-logo {
+    /* border: 1px solid red; */
+    display: block;
+    margin: auto;
+    width: 7%;
+    position: relative;
+    top: 20%;
+}
+
+#loading-text {
+    /* border: 1px solid red; */
+    color:#ffffff;
+    display: block;
+    margin: auto;
+    width: 7%;
+    position: relative;
+    top: 40%;
+    text-align: center;
+}
+
+#loading-animation {
+    /* border: 1px solid red; */
+    display: block;
+    margin: auto;
+    width: 3%;
+    position: relative;
+    top: 50%;
+}
+
 .render-canvas {
     display: flex;
     z-index: 0;
@@ -18,8 +57,8 @@ html, body {
     height: 100%;
 }
 
-.buttons {
-    /* border: 4px solid red; */
+#buttons {
+    /* border: 1px solid red; */
     z-index: 1;
     position: absolute;
     top: 0;
@@ -28,6 +67,8 @@ html, body {
     text-align: center;
     height: 10%;
     background-color: rgba(256, 256, 256, 0.3);
+    opacity: 0;
+    transition: opacity 4s;
 }
 
 .button {
