--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,8 @@ html, body {
     height: 100%;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 0.7vw;
-    /* overflow:hidden; */
-    background: -moz-linear-gradient(top,   #e1d0ab 0%, #3f495f 35%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  #e1d0ab 0%, #3f495f 35%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  #e1d0ab 0%, #3f495f 35%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    overflow:hidden;
+    background: linear-gradient(#aaaaaa, #1d1d1d, #1d1d1d 50%);
 }
 
 #loading-screen {
@@ -19,6 +17,7 @@ html, body {
     background-color: black;
     transition: opacity 0.5s;
     opacity: 1;
+    /* display: none; */
 }
 
 #windows-logo {
@@ -35,10 +34,12 @@ html, body {
     color:#ffffff;
     display: block;
     margin: auto;
-    width: 7%;
+    width: 40%;
     position: relative;
     top: 40%;
     text-align: center;
+    white-space: pre-line;
+    font-size: 2em;
 }
 
 #loading-animation {
@@ -97,7 +98,7 @@ html, body {
     position: absolute;
     right: 5%;
     top: 14.2%;
-    background-color: #ced3db;
+    background-color: #e7dfdd;
     text-align: center;
     height: 0%;
     width: 35%;
@@ -114,7 +115,7 @@ html, body {
     position: absolute;
     left: 5%;
     top: 14.2%;
-    background-color: #ced3db;
+    background-color: #e7dfdd;
     text-align: center;
     height: 0%;
     width: 35%;
@@ -125,26 +126,58 @@ html, body {
     padding-top: 2%
 }
 
-.left-side {
+#extras-container {
     /* border: 1px solid red; */
-    width: 55%;
-    height: 20%;
-    float: left;
-    margin-top: 2%;
-    margin-bottom: 3%;
+    display: grid;
+    height: 90%;
+    grid-template-rows: minmax(0, 0.8fr) minmax(0, 0.8fr) minmax(0, 0.8fr) minmax(0, 0.8fr)
 }
 
-.media-buttons {
+.extras-content {
+    height: 80%;
+    margin: 3% 10%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-column-gap: 0;
+    align-items: center;
+    background-color: #d3d2e4;
+    border-radius: 15px;
+    justify-items: center;
+    align-items: center;
+    overflow-y: auto;
+}
+
+#projects-container {
     /* border: 1px solid red; */
-    width: 14%;
-    float: left;
+    height: 95%;
+    display: grid;
+    grid-template-rows: minmax(0, 0.8fr) minmax(0, 0.8fr) minmax(0, 0.8fr) minmax(0, 0.8fr)
+}
+
+.projects-content {
+    /* border: 1px solid red; */
+    margin: 1% 7%;
+    padding: 1% 1%;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto minmax(0, 1fr);
+    justify-items: center;
+    align-items: center;
+    background-color: #d3d2e4;
+    border-radius: 15px;
+    overflow-y: auto;
 }
 
 .card {
     /* border: 1px solid red; */
-    float: right;
-    width: 86%;
-    padding-top: 1%
+    width: 90%;
+}
+
+.media-buttons {
+    /* border: 1px solid red; */
+    float: left;
+    text-align: center;
+    margin-bottom: 0.5%;
 
 }
 
@@ -152,9 +185,9 @@ html, body {
     aspect-ratio: 1;
     padding: 0;
     border: none;
-    border-radius: 70%;
+    border-radius: 100%;
     background-color: rgba(256, 256, 256, 0.3);
-    margin: 20%;
+    width:5%;
 }
 
 .media-button:hover {
@@ -168,15 +201,12 @@ html, body {
 
 .icons {
     /* border: 1px solid red; */
-    width: 34%;
-    height: 15%;
-    float: right;
+    width: 100%;
     text-align: center;
-    margin-top: 3%;
-    margin-right: 10%;
 }
 
 .icon {
     /* border: 1px solid red; */
-    width: 15%;
+    width: 14%;
+    margin: 0% 2%;
 }
