--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,12 @@ html, body {
     top: 20%;
 }
 
-#loading-text {
+.loading-text {
     /* border: 1px solid red; */
     color:#ffffff;
     display: block;
     margin: auto;
+    padding: 2%;
     width: 40%;
     position: relative;
     top: 40%;
@@ -46,7 +47,7 @@ html, body {
     /* border: 1px solid red; */
     display: block;
     margin: auto;
-    width: 3%;
+    width: 3.5%;
     position: relative;
     top: 50%;
 }
@@ -70,6 +71,17 @@ html, body {
     background-color: rgba(256, 256, 256, 0.3);
     opacity: 0;
     transition: opacity 4s;
+}
+
+#home-blocker {
+    /* border: 1px solid red; */
+    z-index: 2;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    right: 0;
+    height: 100%;
+    background-color: rgba(256, 256, 256, 0);
 }
 
 .button {
